<resources>
    <string name="app_name">FakeGuokr</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_comment">comment</string>
    <string name="title_activity_main_activity_navigation">FakeGuokr</string>

    <string name="title_section1">科学人</string>
    <string name="title_section2">小组</string>
    <string name="title_section3">问答</string>
    <string name="title_section4">登陆</string>
    <string name="title_section5">用户信息</string>

    <string name="setting_daytheme">日间模式</string>
    <string name="setting_nighttheme">夜间模式</string>
    <string name="setting_download_in_wifi">仅在wifi下下载图片</string>
    <string name="setting_download_always">总是下载图片</string>
    <string name="setting_about">关于</string>
    <string name="setting_cancel">取消</string>
    <string name="setting_ok">确定</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="toast_get_faile">获取内容失败，请稍后重试</string>
    <string name="action_example">设置</string>
    <string name="question_no_reply">还没人回答</string>
    <string name="progressdialog_default_msg">获取内容</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_kexueren_article_reply">文章回复</string>
    <string name="title_activity_list_under_agroup_tag">ListUnderAGroupTagActivity</string>
    <string name="title_activity_group_articles_reply">小组回复</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_question_article_list">问答</string>
    <string name="title_activity_setting">设置</string>
</resources>
